--- a/RegistryMonitor/Properties/Resources.resx
+++ b/RegistryMonitor/Properties/Resources.resx
@@ -151,4 +151,7 @@
   <data name="Open_Folder32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Open-Folder32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="monitor_system" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\monitor-system.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
